--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,5 +31,10 @@ jobs:
     - name: Install Helm
       run:  
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+    - name: Install velero
+      run:      
+        wget https://github.com/vmware-tanzu/velero/releases/download/v1.2.0/velero-v1.2.0-linux-amd64.tar.gz
+        tar -zxvf velero-v1.2.0-linux-amd64.tar.gz
+        sudo mv velero-v1.2.0-linux-amd64/velero /usr/local/bin/
   
   
