--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,6 @@ jobs:
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
     - name: Install velero
       run:      
-        wget https://github.com/vmware-tanzu/velero/releases/download/v1.2.0/velero-v1.2.0-linux-amd64.tar.gz
-        tar -zxvf velero-v1.2.0-linux-amd64.tar.gz
-        sudo mv velero-v1.2.0-linux-amd64/velero /usr/local/bin/
+        curl -fsSL -o velero-version-linux-amd64.tar.gz https://github.com/vmware-tanzu/velero/releases/download/version/velero-version-linux-amd64.tar.gz
   
   
