--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,6 +33,5 @@ jobs:
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
     - name: Install velero
       run:      
-        curl -fsSL -o velero-version-linux-amd64.tar.gz https://github.com/vmware-tanzu/velero/releases/download/version/velero-version-linux-amd64.tar.gz
-  
+        curl -fsSL -o velero-v1.4.2-linux-amd64.tar.gz https://github.com/vmware-tanzu/velero/releases/download/v1.4.2/velero-v1.4.2-linux-amd64.tar.gz
   
