--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,10 @@ jobs:
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
     - name: Install velero
       run:      
-        curl -fsSL -o velero-v1.4.2-linux-amd64.tar.gz https://github.com/vmware-tanzu/velero/releases/download/v1.4.2/velero-v1.4.2-linux-amd64.tar.gz
-    - name: Install velero
+        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+        tar -xzvf velero.tar.gz
+
+    - name: Create Namespace
       run: 
         kubectl create namespace eksbackupdemo2
     - name: add Helm Chart
