--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,8 +33,8 @@ jobs:
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
     - name: Install velero
       run:      
-        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz
-        tar - velero.tar.gz
+        curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
+
 
     - name: Create Namespace
       run: 
