--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -48,5 +48,4 @@ jobs:
         helm install my-release my-repo/wordpress -n eksbackupdemo4
     - name: Install velero in eks
       run:  
-        velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 
-      
+        velero backup create notification --include-namespaces eksbackupdemo3
