--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
         tar -xvzf velero.tar.gz
-        sudo mv velero /usr/local/bin/
+        sudo mv velero C:/Windows/system32
         velero version
 
 
