--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,8 @@ jobs:
       run: |
         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
         tar -xvzf velero.tar.gz
+        pwd
+        ls -lrth
         sudo mv velero C:\ProgramFiles\Velero
         velero version
 
