--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -41,7 +41,7 @@ jobs:
         pwd
         ls -lrth
         echo "testing1"
-        ./velero
+        ./velero version
         
         echo "testing2"
         
