--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,6 +44,9 @@ jobs:
         ./velero version
         
         echo "testing2"
+        - name: Install velero in eks
+          run:  
+           velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 
         
 
 
