--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,6 +46,7 @@ jobs:
         echo "testing2"
     - name: Install velero in eks
       run: |
+          cd /home/runner/work/velero/velero/velero-v1.5.2-linux-amd64
           pwd
           ./velero install --provider aws --plugins velero/velero-plugin-for-aws:v1.2.0 --bucket awseksbackup12 --backup-location-config region=us-east-1 --snapshot-location-config region=us-east-1 
         
