--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,8 +45,7 @@ jobs:
     - name: Set environment path
       shell: bash
       run: |
-         echo 'export /home/runner/work/velero/velero/velero-v1.5.2-linux-amd64' >> $GITHUB_ENV
-        
+         echo "::set-env name=PATH::${{ env.PATH }}; /home/runner/work/velero/velero/velero-v1.5.2-linux-amd64'
          echo "testing2"
     - name: Install velero in eks
       run: |
