--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -44,7 +44,7 @@ jobs:
         ./velero version
     - name: Set environment path
       run: |
-         echo "::set-env name=PATH::${{ env.PATH }}; /home/runner/work/velero/velero/velero-v1.5.2-linux-amd64'
+         echo "::set-env name=PATH::${{ env.PATH }};/home/runner/work/velero/velero/velero-v1.5.2-linux-amd64"
          echo "testing2"
     - name: Install velero in eks
       run: |
