--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,9 +45,7 @@ jobs:
     - name: Set environment path
       run: |
          PATH=/home/runner/work/velero/velero/velero-v1.5.2-linux-amd64:$PATH
-    - name: Allow unsecure commands
-      run: 
-       echo "::set-env name=ACTIONS_ALLOW_UNSECURE_COMMANDS::true"
+         velero version
 
          echo "testing2"
     - name: Install velero in eks
