--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -52,5 +52,5 @@ jobs:
       run: |
           cd /home/runner/work/velero/velero/velero-v1.5.2-linux-amd64
           pwd
-          velero backup create pipebackup1 --include-namespaces eksbackupdemo3
+          ./velero backup create pipebackup1 --include-namespaces eksbackupdemo3
     
