--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,6 +35,10 @@ jobs:
       run: |
         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
         tar -xvzf velero.tar.gz
+        ls -lrth
+        cd velero-v1.5.2-linux-amd64
+        pwd
+        ls -lrth
     - name: Create NameSpace backup in S3
       env:
         PATH_NAME: ./velero
