--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,9 +39,10 @@ jobs:
         cd velero-v1.5.2-linux-amd64
         pwd
         ls -lrth
+        ./velero version
     - name: Create NameSpace backup in S3
       env:
         PATH_NAME: ./velero
-      run: |
+      run: 
           $PATH_NAME backup create pipebackup3 --include-namespaces eksbackupdemo3
     
