--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,10 +35,12 @@ jobs:
       run: |
         curl -L https://github.com/vmware-tanzu/velero/releases/download/v1.5.2/velero-v1.5.2-linux-amd64.tar.gz -o velero.tar.gz
         tar -xvzf velero.tar.gz
+        cd velero-v1.5.2-linux-amd64
         ./velero version
     - name: Create NameSpace backup in S3
       env:
          PATH_NAME: ./velero
       run: 
+          cd velero-v1.5.2-linux-amd64
           $PATH_NAME backup create pipebackup4 --include-namespaces eksbackupdemo3
      
