--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -14,20 +14,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
-        aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-        aws-region: us-east-2
+#     - name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+#         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
+#         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
+#         aws-region: us-east-2
 
     - name: Install and configure kubectl
       run:
         curl -o kubectl https://s3.us-west-2.amazonaws.com/amazon-eks/1.23.7/2022-06-29/bin/linux/amd64/kubectl
 
-    - name: Update Kubeconfig File
-      run:
-       aws eks update-kubeconfig --region us-east-1 --name velero
+#     - name: Update Kubeconfig File
+#       run:
+#        aws eks update-kubeconfig --region us-east-1 --name velero
     - name: Install Helm
       run:  
         curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
